--- a/Mission-02/Mission-02/index.html
+++ b/Mission-02/Mission-02/index.html
@@ -1,17 +1,102 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>오늘의 쇼핑 제안 - 쿠팡(Coupang)</title>
-  <link rel="icon" href="/assets/favicon/favicon.png" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/stylesheets/main.css" />
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>오늘의 쇼핑 제안 - 쿠팡(Coupang)</title>
+    <link rel="icon" href="./assets/favicon/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./stylesheets/main.css" />
+  </head>
+  <body>
+    <a href="https://www.coupang.com/">
+      <header>
+        <h1>
+          <picture>
+            <source type="image/webp" srcset="./assets/logo/logo.webp" />
+            <img class="main-logo" src="./assets/logo/logo.png" alt="쿠팡 로고" />
+          </picture>
+        </h1>
+      </header>
+    </a>
+    <section>
+      <h2 class="offer-headline">&nbsp; &nbsp; &nbsp;오늘의 쇼핑 제안</h2>
+      <div class="product-area">
+        <a href="/">
+          <div class="product-card">
+            <div class="sale-rate-badge">30%</div>
+            <img src="./assets/offer/furniture.jpg" alt="솔로리빙 셀린 렌지대 600 800 주방 수납장 템바보드 전자레인지 밥솥 에어프라이어 주방정리 수납장 image" />
+            <div class="product-info">
+              <div class="product-name">솔로리빙 셀린 렌지대 600 800 주방 수납장 템바보드 전자레인지 밥솥 에어프라이어 주방정리 수납장</div>
+              <div class="star-review">
+                <div class="star" id="r45">&nbsp;</div>
+                <div class="review">(3,255)</div>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="/">
+          <div class="product-card">
+            <img src="./assets/offer/renton.jpg" alt="옆 동네몰 레트로 LED 감성 캠핑랜턴 노란빛 대, 빈티지 브론즈 image" />
+            <div class="product-info">
+              <div class="product-name">옆 동네몰 레트로 LED 감성 캠핑랜턴 노란빛 대, 빈티지 브론즈</div>
+              <div class="ship-rocket-handler">
+                <img src="./assets/icon/badge-rocket.svg" alt="로켓배송 로고" />
+              </div>
+              <div class="star-review">
+                <div class="star" id="r40">&nbsp;</div>
+                <div class="review">(1,807)</div>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="/">
+          <div class="product-card">
+            <img src="./assets/offer/drying-rack.jpg" alt="프리미엄 부착식 식기건조대 (600~900)AL 싱크대선반 씽크선반 주방선반, 선택-2) 프리미엄 식기건조대 800AL image" />
+            <div class="product-info">
+              <div class="product-name">프리미엄 부착식 식기건조대 (600~900)AL 싱크대선반 씽크선반 주방선반, 선택-2) 프리미엄 식기건조대 800AL</div>
+              <div class="ship-free">무료배송</div>
+              <div class="star-review">
+                <div class="star" id="r40">&nbsp;</div>
+                <div class="review">(2,423)</div>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="/">
+          <div class="product-card">
+            <div class="sale-rate-badge">10%</div>
+            <img src="./assets/offer/boohgle.jpg" alt="타지 않는 냄비 보오글 네모 6종 풀세트(51가지 안전시험 인증, hBN세라믹 코팅) image" />
+            <div class="product-info">
+              <div class="product-name">타지 않는 냄비 보오글 네모 6종 풀세트(51가지 안전시험 인증, hBN세라믹 코팅)</div>
+              <div class="ship-rocket-handler">
+                <img src="./assets/icon/badge-rocket.svg" alt="로켓배송 로고" />
+              </div>
+              <div class="star-review">
+                <div class="star" id="r40">&nbsp;</div>
+                <div class="review">(1,009)</div>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="/">
+          <div class="product-card">
+            <div class="sale-rate-badge">25%</div>
+            <img src="./assets/offer/deskset.jpg" alt="책상" />
+            <div class="product-info">
+              <div class="product-name">베스트리빙 베이직 멀티 H형 1200 철제 책상, 화이트</div>
+              <div class="ship-free">무료배송</div>
+              <div class="star-review">
+                <div class="star" id="r40">&nbsp;</div>
+                <div class="review">(3,203)</div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </section>
+  </body>
 </html>
