id 다중사용 수정 2022-03-22

--- a/Mission-02/Mission-02/index.html
+++ b/Mission-02/Mission-02/index.html
@@ -32,7 +32,7 @@
             <div class="product-info">
               <div class="product-name">솔로리빙 셀린 렌지대 600 800 주방 수납장 템바보드 전자레인지 밥솥 에어프라이어 주방정리 수납장</div>
               <div class="star-review">
-                <div class="star" id="r45">&nbsp;</div>
+                <div class="star-r45">&nbsp;</div>
                 <div class="review">(3,255)</div>
               </div>
             </div>
@@ -47,7 +47,7 @@
                 <img src="./assets/icon/badge-rocket.svg" alt="로켓배송 로고" />
               </div>
               <div class="star-review">
-                <div class="star" id="r40">&nbsp;</div>
+                <div class="star-r40">&nbsp;</div>
                 <div class="review">(1,807)</div>
               </div>
             </div>
@@ -60,7 +60,7 @@
               <div class="product-name">프리미엄 부착식 식기건조대 (600~900)AL 싱크대선반 씽크선반 주방선반, 선택-2) 프리미엄 식기건조대 800AL</div>
               <div class="ship-free">무료배송</div>
               <div class="star-review">
-                <div class="star" id="r40">&nbsp;</div>
+                <div class="star-r40">&nbsp;</div>
                 <div class="review">(2,423)</div>
               </div>
             </div>
@@ -76,7 +76,7 @@
                 <img src="./assets/icon/badge-rocket.svg" alt="로켓배송 로고" />
               </div>
               <div class="star-review">
-                <div class="star" id="r40">&nbsp;</div>
+                <div class="star-r50">&nbsp;</div>
                 <div class="review">(1,009)</div>
               </div>
             </div>
@@ -90,7 +90,7 @@
               <div class="product-name">베스트리빙 베이직 멀티 H형 1200 철제 책상, 화이트</div>
               <div class="ship-free">무료배송</div>
               <div class="star-review">
-                <div class="star" id="r40">&nbsp;</div>
+                <div class="star-r40">&nbsp;</div>
                 <div class="review">(3,203)</div>
               </div>
             </div>
