FE-project03 완료 2022-04-05

--- a/Mission-03/index.html
+++ b/Mission-03/index.html
@@ -103,18 +103,22 @@
             <img src="./assets/category/houseware/houseware-cleaningcloth.jpg" alt="데일리워터 물걸레 청소포 대형리필 30매, 10팩 이미지" />
             <div class="product-info-area">
               <div class="product-name">데일리워터 물걸레 청소포 대형리필 30매, 10팩</div>
+              <div class="immediately-sale">즉시할인가</div>
               <div class="product-price-area">
-                <div class="immediately-sale">즉시할인가</div>
                 <div class="product-price">15,410<strong> 원</strong></div>
+                <div class="rocket-badge-area"><img src="./assets/icon/badge-rocket.svg" alt="로캣배송 아이콘" /></div>
               </div>
             </div>
           </div>
+          <div class="product-card-divider"></div>
           <div class="product-card">
             <img src="./assets/category/houseware/houseware-massagestick.jpg" alt="트로비스 핸드형 마사지스택, 1개, 블루 이미지" />
             <div class="product-info-area">
               <div class="product-name">트로비스 핸드형 마사지스택, 1개, 블루</div>
+              <div class="immediately-sale">로켓와우회원가</div>
               <div class="product-price-area">
                 <div class="product-price">5,740<strong> 원</strong></div>
+                <div class="rocket-badge-area"><img src="./assets/icon/badge-rocket.svg" alt="로캣배송 아이콘" /></div>
               </div>
             </div>
           </div>
@@ -133,11 +137,116 @@
               <div class="product-name">웰킵스 황사방역마스크 KF94, 초소형 1개입 25개</div>
               <div class="product-price-area">
                 <div class="product-price">16,900<strong> 원</strong></div>
+                <div class="rocket-badge-area"><img src="./assets/icon/badge-rocket.svg" alt="로캣배송 아이콘" /></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <article class="category-best-kitchen">
+        <div class="category-title-container">
+          <h2 class="category-title">주방용품</h2>
+          <a href="/"><div class="shortcut">바로가기</div></a>
+          <div class="hot-keyword">HOT키워드</div>
+          <div class="hash-tag-container">
+            <a href="/" class="hash-tag-box">
+              <div class="hash-tag">#니트릴장갑</div>
+            </a>
+            <a href="/" class="hash-tag-box">
+              <div class="hash-tag">#시리얼디스펜서</div>
+            </a>
+            <a href="/" class="hash-tag-box">
+              <div class="hash-tag">#와플펜</div>
+            </a>
+            <a href="/" class="hash-tag-box">
+              <div class="hash-tag">#텀블러</div>
+            </a>
+            <a href="/" class="hash-tag-box">
+              <div class="hash-tag">#양념통</div>
+            </a>
+            <a href="/" class="hash-tag-box">
+              <div class="hash-tag">#수세미</div>
+            </a>
+          </div>
+        </div>
+        <div class="slide-banner">
+          <img src="./assets/slides/kitchenware-tumbler.jpg" alt="베너 이미지 다우니" />
+          <div class="slide-banner-text-box">
+            <div class="text-line1">텀블러</div>
+            <div class="text-line2">실용성에 디자인까지, 착한 텀블러</div>
+          </div>
+          <div class="indicate-group">
+            <div class="indicate is-active"></div>
+            <div class="indicate"></div>
+          </div>
+        </div>
+        <div class="product-card-container">
+          <div class="product-card">
+            <img src="./assets/category/kitchenware/kitchenware-kitchentowel.jpg" alt="코디 아름드리 Size UP 키친타올 250매, 12롤, 1팩 이미지" />
+            <div class="product-info-area">
+              <div class="product-name">코디 아름드리 Size UP 키친타올 250매, 12롤, 1팩</div>
+              <div class="immediately-sale">로켓와우회원가</div>
+              <div class="product-price-area">
+                <div class="product-price">14,300<strong> 원</strong></div>
+                <div class="rocket-badge-area"><img src="./assets/icon/badge-rocket.svg" alt="로캣배송 아이콘" /></div>
+              </div>
+            </div>
+          </div>
+          <div class="product-card">
+            <img src="./assets/category/kitchenware/kitchenware-airfryer.jpg" alt="니코 에어프라이어 오븐겸용 5.2L, DWAF-5.5NK 이미지" />
+            <div class="product-info-area">
+              <div class="product-name">니코 에어프라이어 오븐겸용 5.2L, DWAF-5.5NK</div>
+              <div class="product-price-area">
+                <div class="product-price">37,800<strong> 원</strong></div>
+                <div class="rocket-badge-area"><img src="./assets/icon/badge-rocket.svg" alt="로캣배송 아이콘" /></div>
+              </div>
+            </div>
+          </div>
+          <div class="product-card">
+            <img src="./assets/category/kitchenware/kitchenware-paperfoil.jpg" alt="착한식재료, 종이호일 30cm X 20m, 2개 이미지" />
+            <div class="product-info-area">
+              <div class="product-name">착한식재료, 종이호일 30cm X 20m, 2개</div>
+              <div class="immediately-sale">즉시할인가</div>
+              <div class="product-price-area">
+                <div class="product-price">11,400<strong> 원</strong></div>
+                <div class="rocket-badge-area"><img src="./assets/icon/badge-rocket.svg" alt="로캣배송 아이콘" /></div>
+              </div>
+            </div>
+          </div>
+          <div class="product-card-divider"></div>
+          <div class="product-card">
+            <img src="./assets/category/kitchenware/kitchenware-zipperbag.jpg" alt="기본에 크린지퍼백 소형 100매. 5개 이미지" />
+            <div class="product-info-area">
+              <div class="product-name">기본에 크린지퍼백 소형 100매. 5개</div>
+              <div class="product-price-area">
+                <div class="product-price">5,740<strong> 원</strong></div>
+                <div class="rocket-badge-area"><img src="./assets/icon/badge-rocket.svg" alt="로캣배송 아이콘" /></div>
+              </div>
+            </div>
+          </div>
+          <div class="product-card">
+            <img src="./assets/category/kitchenware/kitchenware-paperspoon.jpg" alt="메이그린 친환경 종이 위생 스푼, 10개입, 10개 이미지" />
+            <div class="product-info-area">
+              <div class="product-name">메이그린 친환경 종이 위생 스푼, 10개입, 10개</div>
+              <div class="product-price-area">
+                <div class="product-price">4,850<strong> 원</strong></div>
+              </div>
+            </div>
+          </div>
+          <div class="product-card">
+            <img src="./assets/category/kitchenware/kitchenware-illycoffee.jpg" alt="일리 아라비카 셀렉션 브라질 캡슐커피, 120g 1개 이미지" />
+            <div class="product-info-area">
+              <div class="product-name">일리 아라비카 셀렉션 브라질 캡슐커피, 120g 1개</div>
+              <div class="immediately-sale">로켓와우회원가</div>
+              <div class="product-price-area">
+                <div class="product-price">16,900<strong> 원</strong></div>
+                <div class="rocket-badge-area"><img src="./assets/icon/badge-rocket.svg" alt="로캣배송 아이콘" /></div>
               </div>
             </div>
           </div>
         </div>
       </article>
     </section>
+    <footer></footer>
   </body>
 </html>
